@@ -4,7 +4,7 @@
   %small#contact_intro{ hidden_if(!collapsed) }
     You can add lead contact information later.
   #contact{ hidden_if(collapsed) }
-    %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
+    %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
           .label.top Website:
