@@ -1,59 +1,65 @@
 - content_for :javascript do
   :javascript
-    function select_account() {
-      $("account_selector").update("(select existing or <a href='#' onclick='create_account(); return false;'>create new</a>):");
-      $("select_account").show();
-      $("create_account").hide();
-      $("request").value = "select";
-      $("account").focus();
+    function create_account() {
+      $("account_selector").update("(create new or <a href='#' onclick='select_account(); return false;'>select existing</a>):");
+      $("account_id").hide();
+      $("account_name").show();
+      $("account_name").focus();
     }
 
-    function create_account() {
-      $("account_selector").update("(<a href='#' onclick='select_account(); return false;'>select existing</a> or create new):");
-      $("select_account").hide();
-      $("create_account").show();
-      $("request").value = "create";
-      $("account_name").focus();
+    function select_account() {
+      $("account_selector").update("(<a href='#' onclick='create_account(); return false;'>create new</a> or select existing):");
+      $("account_id").show();
+      $("account_name").hide();
+      $("account_id").focus();
+    }
+
+    function submit_form() {
+      // Empty selected account value if the dropdown is not visible.
+      if (!$("account_id").visible()) {
+        var index = $("account_id").selectedIndex;
+        $('account_id')[index].value = "";
+      }
+      // Propagate account[assigned_to] and account[access] to the opportunity.
+      $("opportunity_assigned_to").value = $F("account_assigned_to");
+      $("opportunity_access").value = $F("account_access");
     }
 
 - content_for :javascript_epilogue do
   <script type="text/javascript">
-  - if @lead.errors && @lead.errors.on(:name)
-    create_account();
-  - else
+  - if !@account.id.blank? # errors && @lead.errors.on(:name)
     select_account();
+  - else
+    create_account();
   </script>
 
 .form
   - form_for(@lead, :url => promote_lead_path(@lead)) do |f|
-    = hidden_field_tag "lead[user_id]", @current_user.id
-    = hidden_field_tag "request", ""
-    .title== Convert #{@lead.full_name}
-    = f.error_messages
-    .section
-      %small
-        == Congratulations! By converting the lead #{@lead.full_name} will become a contact associated with 
-        the existing or newly created account. Lead status will be automatically set to converted.
-      %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
-        %tr
-          %td{ :valign => :top }
-            - fields_for(@account) do |a|
+    - fields_for(@account) do |a|
+      = a.hidden_field :user_id
+      = a.hidden_field :access
+      .title== Convert #{@lead.full_name}
+      = a.error_messages
+      .section
+        %small
+          == Congratulations! By converting the lead #{@lead.full_name} will become a contact associated with 
+          the existing or newly created account. Lead status will be automatically set to converted.
+        %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
+          %tr
+            %td{ :valign => :top }
               .label.req
                 Account
                 %span#account_selector
-              #select_account{ hidden }
-                /= select_tag :account, options_from_collection_for_select(@accounts, :id, :name), { :style => "width:330px" }
-                = collection_select :account, :id, @accounts, :id, :name, {}, { :style => "width:330px" }
-              #create_account{ hidden }
-                = a.text_field :name, :style => "width:324px;"
-          %td= spacer
-          %td{ :valign => :top }
-            .label.req Assigned to:
-            = collection_select :lead, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
-    = render :partial => "opportunity", :locals => { :f => f }
-    = render :partial => "convert_permissions",  :locals => { :f => f }
+              = collection_select :account, :id, @accounts, :id, :name, {}, { :style => "width:330px; display:none;" }
+              = a.text_field :name, :style => "width:324px; display:none;"
+            %td= spacer
+            %td{ :valign => :top }
+              .label.req Assigned to:
+              = collection_select :account, :assigned_to, @users, :id, :full_name, { :include_blank => "Myself" }, { :style => "width:160px" }
+    = render :partial => "opportunity"
+    = render :partial => "convert_permissions"
     .buttonbar
-      = f.submit "Convert"
+      = f.submit "Convert", :onclick => "submit_form()"
       or
       = link_to "Cancel", leads_url
 
