@@ -1,3 +1,9 @@
+Sun, Jan 4, 2009
+---------------------------------------------------------------------
+- Streamlined [Lead/Convert] to make it use objects and default values.
+- Added [assigned_to] to accounts and [access] to opportunities.
+- Updated [Account/New] form.
+
 Sat, Jan 3, 2009
 ---------------------------------------------------------------------
 - Refactoring of [Lead/Convert] using [fields_for].
